<resources>
    <string name="app_name">9Gate</string>
    <string name="login">Đăng Nhập</string>
    <string name="back">Back</string>
    <string name="email_id">Email/ ID 9Gate</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="sign_up">Đăng ký</string>
    <string name="fotgot">Quên mật Khẩu</string>
    <string name="facebook">Facebook</string>
    <string name="google">Google</string>
    <string name="confirm">Xác nhận</string>
    <string name="other_login">Hoặc đăng nhập bằng tài khoản</string>
    <string name="tall_your_think">Nói điều bạn... nghĩ</string>
    <string name="search">Tìm kiếm...</string>
    <string name="video">Video</string>
    <string name="theme">Chủ đề</string>
    <string name="special">Nổi bật</string>
    <string name="even">Sự kiện</string>
    <string name="game">MXH Game</string>
    <string name="new_feed">Bảng tin</string>
    <string name="follow">Follow</string>
    <string name="user">Cá nhân</string>
    <string name="gate_9">9Gate</string>
    <string name="sort">Sắp xếp</string>
    <string name="sort_as">Sort as Reply Sequence</string>
    <string name="read_more_cmt">Xem thêm %d Comment</string>
    <string name="post">Post</string>
    <string name="pre_post">Bài trước</string>
    <string name="ori_post">Bài gốc</string>
    <string name="text">Text</string>
    <string name="image">Ảnh</string>
    <string name="topic">Chủ đề</string>
    <string name="new_post">New Post</string>
    <string name="cancel">Cancel</string>
    <string name="write_what_you_think">Bạn đang nghĩ gì?</string>
    <string name="good">Good</string>
    <string name="write_your_rate">Viết đánh giá</string>
    <string name="new_video">New Video</string>
    <string name="add_avarar">+ Ảnh Đại Diện</string>
    <string name="title">Tiêu đề</string>
    <string name="link_youtube">Link Youtube</string>
    <string name="short_caption">Giới thiệu </string>
    <string name="content">Nội dung</string>
    <string name="member">Thành viên</string>
    <string name="charts">Bảng Xếp Hạng</string>
    <string name="gamer">Game Thủ</string>
    <string name="no_1">NO.1</string>
    <string name="nine_gate">9Gate</string>
    <string name="NPH">Nhà Phát Hành</string>
    <string name="new_member">Thành viên mới</string>
    <string name="show_all">Tất cả</string>
    <string name="read_more">Xem thêm</string>
    <string name="follower">Follower</string>
    <string name="information">Thông Tin</string>
    <string name="discustion">Thảo Luận</string>
    <string name="rating">Đánh Giá</string>
    <string name="data">Dữ Liệu</string>
    <string name="game_tab">Game</string>
    <string name="chat">Chat</string>
    <string name="message">Nhắn Tin</string>
    <string name="title_game_discussion">Mạng Xã Hội Game</string>
    <string name="tab_hoso">Hồ sơ</string>
    <string name="tab_new_post">Đăng Bài</string>
    <string name="download_game">Tải Game</string>
    <string name="all">Tất cả</string>
    <string name="download">Tải về</string>
    <string name="five_star">5 Sao</string>
    <string name="four_star">4 Sao</string>
    <string name="three_star">3 Sao</string>
    <string name="two_star">2 Sao</string>
    <string name="one_star">1 Sao</string>
    <string name="user_information">Thông tin cơ bản</string>
    <string name="contact_information">Thông tin liên hệ</string>
    <string name="id_9gate">ID 9Gate</string>
    <string name="short_name">Tên Ngắn Gọn</string>
    <string name="display_name">Tên Hiển Thị</string>
    <string name="medal">Danh Hiệu</string>
    <string name="total_point">Tổng Point</string>
    <string name="rate">Đánh giá</string>
    <string name="ranking">Xếp Hạng</string>
    <string name="gender">Giới Tính</string>
    <string name="birthday">Ngày Sinh</string>
    <string name="address">Nơi Sống</string>
    <string name="status">Tình Trạng</string>
    <string name="create_date">Ngày Tạo</string>
    <string name="home">Trang Chủ</string>
    <string name="email">Email</string>
    <string name="phone_number">Số Điện Thoaị</string>
    <string name="skype">Skype</string>
    <string name="qq">QQ</string>
    <string name="fb">Facebook</string>
    <string name="notify">Thông Báo</string>
    <string name="yes">Đồng ý</string>
    <string name="no">Không</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="zero_number">0</string>
    <string name="follow_plus">+ Follow</string>
    <string name="me_zero">ME (0)</string>
    <string name="game_zero">Game (0)</string>
    <string name="nph_zero">NPH (0)</string>
    <string name="game_thu_zero">Game Thủ (0)</string>
    <string name="sample_rating">4.5</string>
    <string name="vtv_game">VTV Game</string>
    <string name="following">Following</string>
    <string name="game_title">Game</string>
    <string name="favorite">Yêu Thích</string>
    <string name="downloaded">Đã Tải</string>
    <string name="event">Sự Kiện</string>
    <string name="so_point_and_danh_hieu">Số point | Danh hiệu</string>
    <string name="long_text_to_scroll">Where does it come from?  Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock, a Latin professor at Hampden-Sydney College in Virginia, looked up one of the more obscure Latin words, consectetur, from a Lorem Ipsum passage, and going through the cites of the word in classical literature, discovered the undoubtable source. Lorem Ipsum comes from sections 1.10.32 and 1.10.33 of \"de Finibus Bonorum et Malorum\" (The Extremes of Good and Evil) by Cicero, written in 45 BC. This book is a treatise on the theory of ethics, very popular during the Renaissance. The first line of Lorem Ipsum, \"Lorem ipsum dolor sit amet..\", comes from a line in section 1.10.32.  The standard chunk of Lorem Ipsum used since the 1500s is reproduced below for those interested. Sections 1.10.32 and 1.10.33 from \"de Finibus Bonorum et Malorum\" by Cicero are also reproduced in their exact original form, accompanied by English versions from the 1914 translation by H. Rackham.</string>
    <string name="thong_bao">Thông báo</string>
    <string name="bao_cao">Báo cáo</string>
    <string name="game_thu">Game thủ</string>
    <string name="nph_short">NPH</string>
    <string name="you_want">Bạn muốn</string>
    <string name="share">Chia sẻ</string>
    <string name="coppy_link">Sao chép liên kết</string>
    <string name="on_off_post">Bật (tắt) thông báo bài viết này</string>
    <string name="report_with_admin">Báo cáo với Quản trị viên</string>
    <string name="unfollow_post">Bỏ theo dõi</string>
    <string name="hide_post">Ẩn bài viết</string>
    <string name="edit_post">Sửa bài viết</string>
    <string name="delete_post">Xoá bài viết</string>
    <string name="block_comment">Khoá bình luận</string>
    <string name="disable_account">Vô hiệu hoá tài khoản</string>
    <string name="register">Đăng Ký</string>
    <string name="title_privacy">Tôi đã đọc và đồng ý với các</string>
    <string name="privacy">Điều khoản</string>
    <string name="and">và</string>
    <string name="license">Quyền riêng tư</string>
    <string name="note">Note</string>
    <string name="note_register">Note: Trong vào 48h, bạn cần vào Email đã đăng ký để kích hoạt tài khoản trước khi sử dụng</string>
    <string name="password_register">Mật khẩu (6-32)</string>
    <string name="confirm_password_register">Nhập lại mật khẩu</string>
    <string name="you_want_donate">Bạn muốn tặng</string>
    <string name="one_point">1 Point</string>
    <string name="five_point">5 Point</string>
    <string name="ten_point">10 Point</string>
    <string name="fifty_point">50 Point</string>
    <string name="one_hunbered_point">100 Point</string>
    <string name="five_hundered_twenty_point">520 Point</string>
    <string name="input_point_donate">Điền số (Point) từ:</string>
    <string name="share_feelling">Share</string>
    <string name="favourite_feelling">Favourite</string>
    <string name="like_label">Like</string>
    <string name="dislike_label">Dislike</string>
    <string name="comment_feelling">Comment</string>
    <string name="tab_follow">Follow</string>
    <string name="tab_information">Thông Tin</string>
    <string name="tab_discussion">Thảo Luận</string>
    <string name="tab_rating">Đánh Giá</string>
    <string name="tab_data">Dữ Liệu</string>
    <string name="tab_game">Game</string>
    <string name="turn_off_notification">Tắt thông báo</string>
    <string name="system">Hệ thống</string>
    <string name="toolbarBack">BACK</string>
    <string name="person">Cá Nhân</string>
    <string name="social">Mạng Xã Hội</string>
    <string name="number_point">Số Point {point} | Danh hiệu {medal}</string>
    <string name="unable_connect_server">Không thể lấy dữ liệu</string>
    <string name="report_game">Report Game</string>
    <string name="watch">Xem</string>
    <string name="cannot_download">Không tải được</string>
    <string name="google_play">Google Play</string>
    <string name="apk">APK</string>
    <string name="app_store">App Store</string>
    <string name="ipa">IPA</string>
    <string name="windows_phone">Windowns Phone</string>
    <string name="pc">PC</string>
    <string name="other_reason">Lý do khác: </string>
    <string name="not_yet">Chưa có</string>
    <string name="write_information">Vui lòng viết thông tin cụ thể...</string>
    <string name="number_all">Tất cả ({amount})</string>
    <string name="number_post">Post ({amount})</string>
    <string name="number_comment">Comment ({amount})</string>
    <string name="following_follower_publisher">: {game} | Following : {following} | Follower : {follower}</string>
    <string name="open_category">Open ({amount})</string>
    <string name="beta_category">Beta ({amount})</string>
    <string name="coming_category">Coming ({amount})</string>
    <string name="closed_category">Closed ({amount})</string>
    <string name="news_category">Tin Game ({amount})</string>
    <string name="tip_category">Cẩm Nang ({amount})</string>
    <string name="video_category">Video ({amount})</string>
    <string name="image_category">Ảnh ({amount})</string>
    <string name="me_category">ME ({amount})</string>
    <string name="publisher_category">NPH ({amount})</string>
    <string name="game_category">Game ({amount})</string>
    <string name="gamer_category">Game Thủ ({amount})</string>
    <string name="game_type_and_download">"{type} | {size}"</string>
    <string name="tab_member">Thành Viên</string>
    <string name="thong_tin_co_ban">Thông tin cơ bản</string>
    <string name="thong_tin_lien_he">Thông tin liên hệ</string>
    <string name="info_intro">Giới Thiệu</string>
    <string name="info_country">Quốc Gia</string>
    <string name="info_home">Trang Chủ</string>
    <string name="info_email">Email</string>
    <string name="info_status">Tình Trạng</string>
    <string name="info_phone">Điện Thoại</string>
    <string name="info_game">Tên Game</string>
    <string name="info_type_game">Thể Loại</string>
    <string name="info_nph">NPH</string>
    <string name="info_publish_date">Ngày Phát Hành</string>
    <string name="info_fanpage">Fanpage</string>
    <string name="info_group">Groups</string>
    <string name="tat_ca">Tất cả</string>
    <string name="ve_chung_toi">Về chúng tôi</string>
    <string name="gioi_thieu">Giới Thiệu</string>
    <string name="quy_dinh_su_dung">Quy Định Sử Dụng</string>
    <string name="chinh_sach_bao_mat">Chính Sách Bảo Mật</string>
    <string name="cau_hoi_thuong_gap">Câu Hỏi Thường Gặp</string>
    <string name="lien_he">Liên Hệ</string>
    <string name="tin_game">Tin Game</string>
    <string name="cam_nang">Cẩm Nang</string>
    <string name="anh">Ảnh</string>
</resources>