<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.anhtam.gate9.v2.shared.TagIndicatorComponent
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:tag_text="@string/thong_tin_co_ban"
            android:layout_margin="@dimen/layout_margin_8dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/InfoSection">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/info_game"
                android:layout_weight="3"
                style="@style/SmallText"/>
            <TextView
                android:id="@+id/tvNameGame"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                tools:text="12345"
                android:layout_weight="7"
                android:textColor="@android:color/black"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/InfoSection">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/info_type_game"
                android:layout_weight="3"
                style="@style/SmallText"/>
            <TextView
                android:id="@+id/tvTypeGame"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                tools:text="Soha"
                android:layout_weight="7"
                android:textColor="@android:color/black"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/InfoSection">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/info_nph"
                android:layout_weight="3"
                style="@style/SmallText"/>
            <TextView
                android:id="@+id/tvNPH"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                tools:text="SohaGame"
                android:layout_weight="7"
                android:textColor="@android:color/black"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/InfoSection">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/info_country"
                android:layout_weight="3"
                style="@style/SmallText"/>
            <TextView
                android:id="@+id/tvCountry"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                tools:text="12345"
                android:layout_weight="7"
                android:textColor="@android:color/black"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/InfoSection">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/info_status"
                android:layout_weight="3"
                style="@style/SmallText"/>
            <TextView
                android:id="@+id/tvStatus"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                tools:text="12345"
                android:layout_weight="7"
                android:textColor="@android:color/black"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/InfoSection">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/info_publish_date"
                android:layout_weight="3"
                style="@style/SmallText"/>
            <TextView
                android:id="@+id/tvPublishDate"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                tools:text="12345"
                android:layout_weight="7"
                android:textColor="@android:color/black"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/layout_margin_8dp"
            android:layout_marginEnd="@dimen/layout_margin_8dp"
            android:paddingTop="@dimen/padding_8dp"
            android:paddingBottom="@dimen/padding_8dp">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/info_intro"
                android:layout_weight="3"
                style="@style/SmallText"/>
            <TextView
                android:id="@+id/tvIntro"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                tools:text="12345"
                android:layout_weight="7"/>
        </LinearLayout>

        <include
            layout="@layout/share_divider_item_layout"/>

        <com.anhtam.gate9.v2.shared.TagIndicatorComponent
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:tag_text="@string/thong_tin_lien_he"
            android:layout_margin="@dimen/layout_margin_8dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/InfoSection">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/info_home"
                android:layout_weight="3"
                style="@style/SmallText"/>
            <TextView
                android:id="@+id/tvHome"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                tools:text="12345"
                android:layout_weight="7"
                android:textColor="@color/colorIndicator"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/InfoSection">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/info_fanpage"
                android:layout_weight="3"
                style="@style/SmallText"/>
            <TextView
                android:id="@+id/tvFanpage"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                tools:text="12345"
                android:layout_weight="7"
                android:textColor="@android:color/black"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/InfoSection">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/info_group"
                android:layout_weight="3"
                style="@style/SmallText"/>
            <TextView
                android:id="@+id/tvGroup"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                tools:text="12345"
                android:layout_weight="7"
                android:textColor="@color/colorIndicator"/>
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/InfoSection">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/info_phone"
                android:layout_weight="3"
                style="@style/SmallText"/>
            <TextView
                android:id="@+id/tvPhone"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                tools:text="12345"
                android:layout_weight="7"
                android:textColor="@android:color/black"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/InfoSection">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/info_email"
                android:layout_weight="3"
                style="@style/SmallText"/>
            <TextView
                android:id="@+id/tvEmail"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                tools:text="12345"
                android:layout_weight="7"
                android:textColor="@android:color/black"/>
        </LinearLayout>
    </LinearLayout>
</ScrollView>
