<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:id="@+id/parentLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white"
    android:clickable="true"
    android:focusable="true">

    <include
        layout="@layout/shared_toolbar_with_back_layout"/>
    <LinearLayout
        android:id="@+id/tabLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/toolbar">
        <com.anhtam.gate9.v2.shared.CustomTabItem
            android:id="@+id/tabAll"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:icon="@drawable/ic_all"
            app:text="@string/tat_ca"
            app:colorIndicator="@color/tab_orange"
            app:enable="true"/>
        <com.anhtam.gate9.v2.shared.CustomTabItem
            android:id="@+id/tabGameThu"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:icon="@drawable/ic_gamer"
            app:text="@string/game_thu"
            app:colorIndicator="@color/tab_green"/>
        <com.anhtam.gate9.v2.shared.CustomTabItem
            android:id="@+id/tabNPH"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:icon="@drawable/ic_leanpub"
            app:text="@string/nph_short"
            android:layout_weight="1"
            app:colorIndicator="@color/tab_purple"/>
        <com.anhtam.gate9.v2.shared.CustomTabItem
            android:id="@+id/tabGame"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:icon="@drawable/ic_tab_game"
            app:text="@string/game_title"
            android:layout_weight="1"
            app:colorIndicator="@color/tab_orange_light"/>
    </LinearLayout>

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/followingViewPager"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divide"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    </androidx.viewpager.widget.ViewPager>
</LinearLayout>
